:hammer: fix : 사진 경로 수정

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -442,7 +442,7 @@
     <header id="header">
       <div class="container">
         <h2 class="logo">
-          <img src="../img/high-five.png" alt="logo" width="100" height="100" />
+          <img src="../../static/img/high-five.png" alt="logo" width="100" height="100" />
           <div class="brand">HIGH-FIVE-BOOKS</div>
         </h2>
 
