--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -470,7 +470,7 @@
     <header id="header" role="banner">
       <div class="container">
         <div class="logo">
-          <img src="img/high-five.png" alt="HIGH-FIVE 로고" />
+          <img src="../static/img/high-five.png" alt="HIGH-FIVE 로고" />
           <div class="brand">HIGH-FIVE BOOKS</div>
         </div>
 
@@ -511,7 +511,7 @@
               <div>
                 <img
                   class="hero-img"
-                  src="img/book1.jpeg"
+                  src="../static/img/book1.jpeg"
                   alt="추천 도서 표지 이미지"
                 />
               </div>
@@ -685,7 +685,7 @@
             <!-- 샘플 카드 5개 -->
             <article class="card">
               <div class="thumb">
-                <img src="img/book2.jpeg" alt="트랜드 코리아 2026 표지" />
+                <img src="../static/img/book2.jpeg" alt="트랜드 코리아 2026 표지" />
               </div>
               <div class="info">
                 <div class="title">트랜드 코리아 2026</div>
@@ -699,7 +699,7 @@
             <article class="card">
               <div class="thumb">
                 <img
-                  src="img/book3.jpeg"
+                  src="../static/img/book3.jpeg"
                   alt="처음 만나는 양자의 세계 표지"
                 />
               </div>
@@ -715,7 +715,7 @@
             <article class="card">
               <div class="thumb">
                 <img
-                  src="img/book4.jpeg"
+                  src="../static/img/book4.jpeg"
                   alt="대형주 추세추종 투자법칙 표지"
                 />
               </div>
@@ -730,7 +730,7 @@
             </article>
             <article class="card">
               <div class="thumb">
-                <img src="img/book5.jpeg" alt="위버맨쉬 표지" />
+                <img src="../static/img/book5.jpeg" alt="위버맨쉬 표지" />
               </div>
               <div class="info">
                 <div class="title">위버맨쉬</div>
@@ -743,7 +743,7 @@
             </article>
             <article class="card">
               <div class="thumb">
-                <img src="img/book6.jpeg" alt="박곰희 연금 부자수업 표지" />
+                <img src="../static/img/book6.jpeg" alt="박곰희 연금 부자수업 표지" />
               </div>
               <div class="info">
                 <div class="title">박곰희 연금 부자수업</div>
