--- a/src/main/resources/templates/order/payment.html
+++ b/src/main/resources/templates/order/payment.html
@@ -278,7 +278,7 @@
     <header id="header">
       <div class="container">
         <div class="logo">
-          <img src="../img/high-five.png" alt="logo" width="100" height="100" />
+          <img src="../../static/img/high-five.png" alt="logo" width="100" height="100" />
           <div class="brand">HIGH-FIVE BOOKS</div>
         </div>
         <nav class="gnb" aria-label="주요 메뉴">
