--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -487,9 +487,9 @@
         </nav>
 
         <div class="user-menu">
-            <a class="user-link" href="./mypage.html">마이페이지</a>
-            <a class="user-link" href="./cart.html">장바구니</a>
-            <a class="user-link pill" href="./login.html">로그인</a>
+            <a class="user-link" href="./order/mypage.html">마이페이지</a>
+            <a class="user-link" href="./order/cart.html">장바구니</a>
+            <a class="user-link pill" href="./member/login.html">로그인</a>
         </div>
     </div>
 </header>
