--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -503,6 +503,7 @@
           <div class="input-group">
             <label for="loginId">아이디</label>
             <input type="text" id="loginId" placeholder="아이디를 입력하세요" />
+            <img src="static/img/free-icon-eye-158746.png" width="50" height="50">
           </div>
           <div class="input-group">
             <label for="loginPw">비밀번호</label>
