--- a/src/main/resources/templates/Book/book-detail.html
+++ b/src/main/resources/templates/Book/book-detail.html
@@ -660,7 +660,8 @@
     <header id="header">
       <div class="container">
         <h2 class="logo">
-          <img src="../../static/img/high-five.png" alt="logo" width="100" height="100" />
+<!--   <img src="../../static/img/high-five.png" alt="logo" width="100" height="100" />  -->
+          <img th:src="@{/static/img/high-five.png}" alt="logo" width="100" height="100">
           <div class="brand">HIGH-FIVE-BOOKS</div>
         </h2>
 
@@ -690,7 +691,8 @@
     <div class="container2">
       <section class="book-detail-main">
         <div class="book-image">
-          <img src=""../img/book1.jpeg" alt="도서 표지" />
+<!--          <img src=""../img/book1.jpeg" alt="도서 표지" />-->
+            <img th:src="@{img/book1.jpeg}" alt="표지"/>
         </div>
         <div class="book-info">
           <h1>프론트엔드 개발자를 위한 자바스크립트 바이블</h1>
