--- a/src/main/resources/templates/order/payment.html
+++ b/src/main/resources/templates/order/payment.html
@@ -277,11 +277,11 @@
     <!-- ===== 헤더 ===== -->
     <header id="header" role="banner">
         <div class="container">
-            <div class="logo">
-                <!-- [수정됨] th:src="@{/img/...}" -->
-                <img th:src="@{/img/high-five.png}" alt="HIGH-FIVE 로고" />
+            <a href="./payment.html" class="logo">
+                <img src="../img/logo2.png" alt="HIGH-FIVE 로고"/>
                 <div class="brand">HIGH-FIVE BOOKS</div>
-            </div>
+            </a>
+
 
             <nav class="gnb" aria-label="주요 메뉴">
                 <div class="search-box" role="search">
