refactor: logo update

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -470,7 +470,7 @@
 <header id="header" role="banner">
     <div class="container">
         <a href="./main.html" class="logo">
-            <img src="./img/logo4.png" alt="HIGH-FIVE 로고"/>
+            <img src="./img/logo.png" alt="HIGH-FIVE 로고"/>
             <div class="brand">HIGH-FIVE BOOKS</div>
         </a>
 
