--- a/src/main/resources/templates/Book/book-detail.html
+++ b/src/main/resources/templates/Book/book-detail.html
@@ -660,7 +660,7 @@
   <header id="header" role="banner">
       <div class="container">
           <a href="./book-detail.html" class="logo">
-              <img src="../img/high-five.png" alt="HIGH-FIVE 로고"/>
+              <img src="../img/logo.png" alt="HIGH-FIVE 로고"/>
               <div class="brand">HIGH-FIVE BOOKS</div>
           </a>
 
