--- a/src/main/resources/templates/order/payment.html
+++ b/src/main/resources/templates/order/payment.html
@@ -278,7 +278,7 @@
     <header id="header" role="banner">
         <div class="container">
             <a href="./payment.html" class="logo">
-                <img src="../img/logo2.png" alt="HIGH-FIVE 로고"/>
+                <img src="../img/logo.png" alt="HIGH-FIVE 로고"/>
                 <div class="brand">HIGH-FIVE BOOKS</div>
             </a>
 
