--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -474,6 +474,7 @@
         align-items: center;
         gap: 14px;
         margin-left: auto;
+
       }
 
       /* 기본 텍스트 링크(마이페이지/장바구니) */
@@ -501,6 +502,14 @@
         background: var(--color-accent);
         color: #fff;
       }
+
+      .headerBar{
+          width: 500px;
+          height: 40px;
+          padding-left: 80px;
+          margin: 20px 20px;
+      }
+
     </style>
   </head>
   <body>
@@ -508,7 +517,7 @@
       <div class="container">
           <div class="logo">
               <!-- [수정됨] th:src="@{/img/...}" -->
-              <img th:src="@{/img/1.png}" alt="HIGH-FIVE 로고" />
+              <img th:src="@{/img/high-five.png}" alt="HIGH-FIVE 로고" />
               <div class="brand">HIGH-FIVE BOOKS</div>
           </div>
 
@@ -516,18 +525,20 @@
               <div class="search-box" role="search">
                   <input
                           type="search"
-                          placeholder="도서명, 저자, ISBN, 태그 검색"
+                          placeholder="검색어를 입력하세요"
                           aria-label="통합 검색"
                   />
                   <button class="search-btn" aria-label="검색">검색</button>
               </div>
           </nav>
 
-          <div class="user-menu">
-              <a class="user-link" th:href="@{/order/mypage.html}">마이페이지</a>
-              <a class="user-link" th:href="@{/order/cart.html}">장바구니</a>
-              <a class="user-link pill" th:href="@{/member/login.html}">로그인</a>
-          </div>
+         <div class="headerBar">
+             <div class="user-menu">
+                 <a class="user-link" th:href="@{/order/mypage.html}">마이페이지</a>
+                 <a class="user-link" th:href="@{/order/cart.html}">장바구니</a>
+                 <a class="user-link pill" th:href="@{/member/login.html}">로그인</a>
+             </div>
+         </div>
       </div>
   </header>
 
@@ -543,12 +554,12 @@
             <label for="loginId">아이디</label>
             <div class="input-wrapper">
               <input type="text" id="loginId" placeholder="아이디를 입력하세요" style="padding-right: 40px;"/>
-              <img
-                      class="input-icon"
-                      th:src="@{/img/free-icon-eye.png}"
-                      alt="아이콘"
-                      onclick="togglePasswordVisibility()"
-              />
+<!--              <img-->
+<!--                      class="input-icon"-->
+<!--                      th:src="@{/img/free-icon-eye.png}"-->
+<!--                      alt="아이콘"-->
+<!--                      onclick="togglePasswordVisibility()"-->
+<!--              />-->
             </div>
           </div>
           <div class="input-group">
