feat:로그인 페이지에 눈 아이콘 추가[#6]

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,7 +80,7 @@
         .logo .brand {
             font-size: 24px;
             font-weight: 900;
-            color: var(--color-primary);
+            color: black;
         }
         .gnb {
             flex: 1;
@@ -344,7 +344,7 @@
         .logo .brand {
             font-size: 21px;
             font-weight: 900;
-            color: #000080;
+            color: black;
             margin-top: 5px;
         }
 
@@ -431,6 +431,10 @@
             }
         }
 
+        .brand{
+            color: black;
+        }
+
         /* ==== 공통 우측 사용자 메뉴 (텍스트 2 + 노란 pill 1) ==== */
         .user-menu {
             display: flex;
@@ -441,7 +445,7 @@
 
         /* 기본 텍스트 링크(마이페이지/장바구니) */
         .user-menu .user-link {
-            display: inline-block;
+            display: inline-block;z
             font-weight: 700;
             color: #333;
             text-decoration: none;
@@ -839,7 +843,6 @@
                 <a class="chip" href="#">오늘의 특가</a>
                 <a class="chip" href="#">사은품 안내</a>
                 <a class="chip" href="#">eBook 쿠폰</a>
-                <a class="chip" href="#">중고샵</a>
                 <a class="chip" href="#">MD의 선택</a>
             </div>
         </section>
