--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -90,6 +90,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        height: 10rem;
       }
 
       .logo {
@@ -108,7 +109,6 @@
         flex-direction: column;
         align-items: center;
         width: 30rem;
-
         margin: 10px;
       }
 
@@ -254,15 +254,9 @@
         background-color: #ffffff;
       }
 
-      .container2 {
-        max-width: 900px;
-        margin: 30px auto;
-        padding: 20px;
-      }
-
       .login-area {
         width: 100%;
-        max-width: 420px;
+        max-width: 500px;
         background-color: #ffffff;
         padding: 50px;
         border-radius: 10px;
@@ -554,21 +548,23 @@
             <label for="loginId">아이디</label>
             <div class="input-wrapper">
               <input type="text" id="loginId" placeholder="아이디를 입력하세요" style="padding-right: 40px;"/>
-<!--              <img-->
-<!--                      class="input-icon"-->
-<!--                      th:src="@{/img/free-icon-eye.png}"-->
-<!--                      alt="아이콘"-->
-<!--                      onclick="togglePasswordVisibility()"-->
-<!--              />-->
             </div>
           </div>
           <div class="input-group">
             <label for="pwd">비밀번호</label>
-            <input
-              type="password"
-              id="pwd"
-              placeholder="비밀번호를 입력하세요"
-            />
+              <div class="input-wrapper">
+                  <input
+                          type="password"
+                          id="pwd"
+                          placeholder="비밀번호를 입력하세요"
+                  />
+                  <img
+                          class="input-icon" src="../img/free-icon-eye.png"
+                          alt="아이콘"
+                          width="100"
+                          height="100"
+                  />
+              </div>
           </div>
 
           <button type="submit" class="login-btn">로그인</button>
