--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -445,7 +445,7 @@
 
         /* 기본 텍스트 링크(마이페이지/장바구니) */
         .user-menu .user-link {
-            display: inline-block;z
+            display: inline-block;
             font-weight: 700;
             color: #333;
             text-decoration: none;
@@ -474,7 +474,6 @@
 <header id="header" role="banner">
     <div class="container">
         <a href="./main.html" class="logo">
-            <img src="./img/logo.png" alt="HIGH-FIVE 로고"/>
             <div class="brand">HIGH-FIVE BOOKS</div>
         </a>
 
