--- a/src/main/resources/templates/admin/coupons.html
+++ b/src/main/resources/templates/admin/coupons.html
@@ -152,7 +152,7 @@
 <aside class="sidebar">
     <h2>HIGHFIVE 관리자</h2>
     <ul class="menu">
-        <li><a href="members.html" data-key="members">회원 관리</a></li>
+        <li><a href="books.html" data-key="members">도서 관리</a></li>
         <li><a href="points.html" data-key="points">포인트 정책 관리</a></li>
         <li><a href="coupons.html" data-key="coupons">쿠폰 관리</a></li>
     </ul>
