--- a/src/main/resources/templates/admin/coupons.html
+++ b/src/main/resources/templates/admin/coupons.html
@@ -169,15 +169,15 @@
 
             </div>
             <div class="form-row">
-                <label>텍스트 리뷰 적립 P</label>
+                <label>생일 축하 쿠폰 (%)</label>
                 <input type="number" value="200">
             </div>
             <div class="form-row">
-                <label>사진 리뷰 적립 P</label>
+                <label>첫 구매 환영 쿠폰 (%)</label>
                 <input type="number" value="500">
             </div>
             <div class="form-row">
-                <label>도서 구매 기본 적립률 (%)</label>
+                <label>오픈 기념 쿠폰 (%)</label>
                 <input type="number" step="0.1" value="0.5">
             </div>
 
