--- a/src/main/resources/templates/order/cart.html
+++ b/src/main/resources/templates/order/cart.html
@@ -407,7 +407,7 @@
                 <div>
                   <div class="item-title">트렌드 코리아 2026</div>
                   <div class="item-meta">김난도 외 | 2025.09 | 미래의창</div>
-                  <div class="subrow">포장여부: 예</div>
+                  <div class="subrow">포장선택: 포장</div>
                 </div>
                 <div class="qty">
                   <button class="dec">-</button>
@@ -430,7 +430,7 @@
                 <div>
                   <div class="item-title">처음 만나는 양자의 세계</div>
                   <div class="item-meta">채은미 | 2025.09 | 사이언스북스</div>
-                  <div class="subrow">옵션: 기본</div>
+                  <div class="subrow">포장선택: 포장 안 함</div>
                 </div>
                 <div class="qty">
                   <button class="dec">-</button>
