--- a/src/main/resources/templates/admin/points.html
+++ b/src/main/resources/templates/admin/points.html
@@ -170,7 +170,11 @@
                 <input type="number" value="5000">
             </div>
             <div class="form-row">
-                <label>리뷰 적립 P</label>
+                <label>사진리뷰 적립 P</label>
+                <input type="number" value="200">
+            </div>
+            <div class="form-row">
+                <label>텍스트리뷰 적립 P</label>
                 <input type="number" value="200">
             </div>
             <div class="form-row">
