--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -612,6 +612,7 @@
                       </label>
                   </div>
               </div>
+            </div>
 
 
               <div class="order-summary">
@@ -651,6 +652,7 @@
           </div>
         </div>
       </form>
+
     </main>
     <footer id="footer">
       <div class="container">
