--- a/src/main/resources/templates/admin/coupons.html
+++ b/src/main/resources/templates/admin/coupons.html
@@ -181,7 +181,12 @@
                 <input type="number" step="0.1" value="0.5">
             </div>
 
-            <button class="save-btn">정책 저장하기</button>
+<!--            // action : 관리자 정책 저장하는 post api 주소-->
+            <form method="post" action="">
+                <input type="submit" value="정책 저장하기" class="save-btn">
+            </form>
+
+            <button >정책 저장하기</button>
             <div class="updated-info">최근 수정: 2025-11-10 (관리자 ID: 1)</div>
         </div>
     </main>
